[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Main/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Clock/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/JobPanel/JobPanel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/JobPanel/JobPanelFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Main/PanelStylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/Main/PanelHoverStylebox.tres" type="StyleBox" id=6]
[ext_resource path="res://Scenes/Main/PanelHighlightStylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://Scenes/JobPanel/JobComplete.tres" type="Animation" id=8]

[node name="JobPanel" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 800, 120 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
happiness_affect = -1.0
panel_normal = ExtResource( 5 )
panel_hover = ExtResource( 6 )
panel_active = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_right = 800.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_right = 800.0
margin_bottom = 120.0
mouse_filter = 2

[node name="Icon" type="Control" parent="Panel/MarginContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
mouse_filter = 2

[node name="Sprite" type="Sprite" parent="Panel/MarginContainer/HBoxContainer/Icon"]

[node name="Center" type="Control" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 800.0
margin_bottom = 120.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainer/HBoxContainer/Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = 6.0
margin_right = 291.0
margin_bottom = 38.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskClock" parent="Panel/MarginContainer/HBoxContainer/Center" instance=ExtResource( 2 )]
margin_left = 22.9639
margin_top = 47.9648
margin_right = 87.9639
margin_bottom = 112.965
mouse_filter = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Center"]
margin_right = 498.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Name of the Chore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/JobComplete = ExtResource( 8 )

[connection signal="gui_input" from="." to="." method="_on_JobPanel_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_JobPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_JobPanel_mouse_exited"]
[connection signal="timeout" from="Panel/MarginContainer/HBoxContainer/Center/TaskClock" to="." method="_on_TaskClock_timeout"]
